fix(ENG-853): Avoid showing the horizontal scrollbar when the filter is selected

--- a/src/sass/components/_filters.scss
+++ b/src/sass/components/_filters.scss
@@ -3,7 +3,7 @@
   z-index: 10;
 
   .filter {
-    min-width: 258px;
+    min-width: 250px;
   }
 
   .datepicker {
